# API-CineReserve

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml
accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
apicine/: asgi.py  celery.py  urls.py  wsgi.py
apicine/settings/: base.py  development.py  production.py
bank/: admin.py  models.py  serializers.py  urls.py  views.py
screening/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
screening/migrations/: 0001_initial.py  0002_alter_session_options.py  0003_alter_seatreservation_expires_at.py
theater/: admin.py  models.py
theater/migrations/: 0001_initial.py
